Make all html-tags lowercase

--- a/se-9acwg.html
+++ b/se-9acwg.html
@@ -2,29 +2,30 @@
 translated: 2007-05-14
 originalhref: 9acwg.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="flags/hr.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="flags/hr.gif" alt="" align=left></p>
+</center><p align="left">
 <ul>
-<b>9A-CW-G: </b>Croatian Telegraphy Group (Kroatiska telegrafigruppen)<BR>
-<P>
-Telegrafiklubben i Kroatien:<BR>
+<b>9A-CW-G: </b>Croatian Telegraphy Group (Kroatiska telegrafigruppen)<br>
+<p>
+Telegrafiklubben i Kroatien:<br>
 Kolla ovanstående web-sida om du kan läsa 9A-språket.
 Du kommer att hitta
 allmän information, 
 regler för W-9ACWG-M diploment, och
 en medlemslista.
-<BR>
+<br>
 Tillgänglig e-mail adress:...9a3pa (at) 9a0tcp.ampr.org...
-<BR>
-Sekreterare: <BR>
-           MATO SAMARDZIC, 9A3SM<BR>
-           JURE KASTELANA 20<BR>
-           HR-10000 ZAGREB, Kroatien<BR>
+<br>
+Sekreterare: <br>
+           MATO SAMARDZIC, 9A3SM<br>
+           JURE KASTELANA 20<br>
+           HR-10000 ZAGREB, Kroatien<br>
 
-<P>
+<p>
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
@@ -32,4 +33,5 @@ Sekreterare: <BR>
 
 {% include translated.html %}
 
-</body></html>
+</body>
+</html>
