--- a/se-bqc.html
+++ b/se-bqc.html
@@ -2,22 +2,23 @@
 translated: 2007-05-14
 originalhref: bqc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/bqc.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/bqc.gif" alt="" align=left></p>
+</center><p align="left">
 <ul>
 
-<A HREF="http://home.wanadoo.nl/bqc/index.html"><b>BQC: </b></A>
-<b>B</b>enelux <b>Q</b>RP <b>C</b>lub <BR>
+<a href="http://home.wanadoo.nl/bqc/index.html"><b>BQC: </b></a>
+<b>B</b>enelux <b>Q</b>RP <b>C</b>lub <br>
 Denna klubb är ägnad åt QRP och definierar det som 5W HF output.
 Klubben är öppen för alla QRP-enthusiaster och 
 ger varje kvartal ut en tidning på holländska.
 Tidningen är till för QRP-operatörer och hemmabyggare.
 Adressen för att kontakta klubben är:
 Benelux QRP Club, Postbus 15, 2100 AA, Heemstede, Nederländerna
-<P>
+<p>
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
@@ -25,4 +26,5 @@ Benelux QRP Club, Postbus 15, 2100 AA, Heemstede, Nederländerna
 
 {% include translated.html %}
 
-</body></html>
+</body>
+</html>
