--- a/se-cft.html
+++ b/se-cft.html
@@ -2,37 +2,38 @@
 translated: 2007-05-14
 originalhref: cft.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/cft.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
-<A HREF="http://www.on5cft.be.tf">CFT</A>
-<B>Club Francophone Télégraphiste</B></P>
+<p><img src="imgsclub/cft.gif" alt="" align=left></p>
+</center><p align="left">
+<a href="http://www.on5cft.be.tf">CFT</a>
+<b>Club Francophone Télégraphiste</b></p>
 (Fransktalande telegrafistklubben)
-<P>
+<p>
 Denna belgiska klubb ägnar sig åt telegrafi inom amatörradio och
 amatöranda i allmänhet.
 Klubben kommer ursprungligen från de fransktalande delarna av Belgien
 men internationella medlemmar är också välkomna.
-</P>
-<P>
+</p>
+<p>
 För att bli medlem måste du kontakta klubbens grundare:
 ON4KML - ON4LDL - ON4LEX - ON4RU - ON4KMB - ON4WC - ON4KRS
 eller deras klubbstation
 ON4CPN,
 företrädesvis på fredagkvällar på 3520 kHz kl 21 lokal tid.
 QSO:et måste vara minst 15 minuter långt.
-</P><P> 
+</p><p> 
 Rekommenderade QRGs 3520, 7020, 14020, 21020 kHz.
-</P><P>
+</p><p>
 Mer information från
 E-mail...r.michaux (at symbol) skynet.be...
-<BR>
-<A HREF="imgsclub/logo_cft2.jpg">Klicka här för att se CFT-logon i storformat
+<br>
+<a href="imgsclub/logo_cft2.jpg">Klicka här för att se CFT-logon i storformat
 såsom den är designad av F6IIE.
-</A>
-<BR CLEAR=LEFT></P>
+</a>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
@@ -40,5 +41,6 @@ såsom den är designad av F6IIE.
 
 {% include translated.html %}
 
-</body></html>
+</body>
+</html>
 
