--- a/se-ctc.html
+++ b/se-ctc.html
@@ -2,33 +2,35 @@
 translated: 2007-05-14
 originalhref: ctc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/ctc.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/ctc.gif" alt="" align=left></p>
+</center><p align="left">
 <ul>
-<b>CTC: </b>Croatian Telegraphy Club <BR>
+<b>CTC: </b>Croatian Telegraphy Club <br>
 Kroatiska telegrafiklubben
-<P>
-Telegrafiklubb i Kroatien som grundades den 12:e december 2001.<BR>
-<BR>
+<p>
+Telegrafiklubb i Kroatien som grundades den 12:e december 2001.<br>
+<br>
 Enda kravet för medlemsskap är att vara en aktiv
 radioamatörtelegrafioperatör.
 Rekommenderade arbetsfrekvenser: 3.530, 7.015, 14.030, 21.030, och 28.030 MHz.
-<BR>
+<br>
 Tillgänglig E-mailadress:...9a3fo (at) hi.hinet.hr...
-<BR>
-Sekreterare: <BR>
-                     Mladen Buzic<BR>
-                     Franjevacka 5<BR>
-                     42220 Novi Marof<BR>
-                     Kroatien<BR>
-<P>
+<br>
+Sekreterare: <br>
+                     Mladen Buzic<br>
+                     Franjevacka 5<br>
+                     42220 Novi Marof<br>
+                     Kroatien<br>
+<p>
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
