--- a/se-eaqrp.html
+++ b/se-eaqrp.html
@@ -2,20 +2,22 @@
 translated: 2007-05-14
 originalhref: eaqrp.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/eaqrp.gif" ALT="" align=left></P>
-<P ALIGN=LEFT>
+<p><img src="imgsclub/eaqrp.gif" alt="" align=left></p>
+<p align="left">
 <a href="http://www.eaqrp.com/"><b>EA-QRP-C:</b></a><br>
 Målet för den spanska EA-QRP-CLUB är att markadsföra radiokommunikation
 i vilken mod som helst då man använder lite eller mycket lite effekt.
 (QRP 5W eller mindre på CW och upp till 10W PEP på SSB).
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
