--- a/se-eucons.html
+++ b/se-eucons.html
@@ -8,8 +8,7 @@ originalhref: eucons.html
 <title>EuCWs konstitution</title>
 <link rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink= 
-"purple">
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <p align="center"><img src="imgs/eucwflag.gif" alt=""></p>
 
 <p align="center">
@@ -225,9 +224,9 @@ Reviderad november 1994.</strong><br>
   </font>
 </p>
 
-<P>Not: Se <a href="se-eucwh.html">EuCW-historian</A>
-för en komplett lista av medlemsklubbar och dagen för deras medlemsskap</P>
-<HR>
+<p>Not: Se <a href="se-eucwh.html">EuCW-historian</a>
+för en komplett lista av medlemsklubbar och dagen för deras medlemsskap</p>
+<hr>
 <a href="se-eucw.html"> Tillbaka </a> till listan över EuCW-klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
