--- a/se-eucwa.html
+++ b/se-eucwa.html
@@ -3,51 +3,50 @@ translated: 2007-05-14
 originalhref: eucwa.html
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<HTML>
-<HEAD>
-<TITLE>EuCW Diplomet</TITLE>
-<LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
-</HEAD>
-<BODY bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
-"purple">
-<TABLE width="100%">
-<TR>
-<TD align="left"><IMG src="imgsclub/hcc.gif" alt=""></TD>
-<TD align="center">
-<H1>Det europeiska CW-förbundet</H1>
-<H2 align="center">Kört EuCW Diplom</H2>
-</TD>
-<TD align="right"><IMG src="imgs/eucwflag.gif" alt=""></TD>
-</TR>
-</TABLE>
-<HR>
-<CENTER>
+<html>
+<head>
+<title>EuCW Diplomet</title>
+<link rel="SHORTCUT ICON" href="imgs/eucw.ico">
+</head>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
+<table width="100%">
+<tr>
+<td align="left"><img src="imgsclub/hcc.gif" alt=""></td>
+<td align="center">
+<h1>Det europeiska CW-förbundet</h1>
+<h2 align="center">Kört EuCW Diplom</h2>
+</td>
+<td align="right"><img src="imgs/eucwflag.gif" alt=""></td>
+</tr>
+</table>
+<hr>
+<center>
 EuCW är tacksamma gentemot HCC (Hispania CW Club)
 för att de stod för tryckkostnaden för certifikaten
-till EuCW-diplomet</CENTER>
-<HR>
-<P><BR>
-<STRONG>Allmänna regler</STRONG><BR>
+till EuCW-diplomet</center>
+<hr>
+<p><br>
+<strong>Allmänna regler</strong><br>
 
-<STRONG>1</STRONG>. Detta prestigfulla diplom är tillgängligt
+<strong>1</strong>. Detta prestigfulla diplom är tillgängligt
 för alla licensierade radioamatörer och kortvågslyssnare 
-var som helst i världen.<BR>
+var som helst i världen.<br>
 
-<STRONG>2</STRONG>. Enbart kontakter genomförda efter 
+<strong>2</strong>. Enbart kontakter genomförda efter 
 den 27:e April 1991,
 (Samuel F.B. Morses tvåhundraåriga födelsedag)
-gäller för detta diplom.<BR>
+gäller för detta diplom.<br>
 
-<STRONG>3</STRONG>.
+<strong>3</strong>.
 Ansökaren skall skicka en lista med kontakter
 (eller hörda SWL-stationer
 [SWL-stationer listar hörda stationer, översättarens anmärkning])
 för vilka QSL-kort mottagits.
 Listan måste vidimeras av en licensierad radioamatör som är
 medlem i en EuCW-klubb och som anger namnet på sin klubb
-och sitt medlemsskapsnummer.<BR>
+och sitt medlemsskapsnummer.<br>
 
-<STRONG>4</STRONG>.
+<strong>4</strong>.
 Listan skall innehålla
 datum för kontakten,
 anropssignal på den körda stationen,
@@ -55,81 +54,81 @@ band,
 namn på operatören,
 QTH,
 EuCW-klubb,
-klubb medlemsnummer.<BR>
+klubb medlemsnummer.<br>
 
-<STRONG>5</STRONG>.
-Se <A href="se-eucw.html">http://www.scag.se/eucw-sv/eucw.html</A>
-för att hitta en lista med EuCW-klubbar.<BR>
+<strong>5</strong>.
+Se <a href="se-eucw.html">http://www.scag.se/eucw-sv/eucw.html</a>
+för att hitta en lista med EuCW-klubbar.<br>
 
-<STRONG>6</STRONG>.
-Olika certifikat utfärdas för varje klass på diplomet.<BR>
+<strong>6</strong>.
+Olika certifikat utfärdas för varje klass på diplomet.<br>
 
-<STRONG>7</STRONG>.
-Avgiften är EUR 6, USD 8 eller 12 IRS.<BR>
+<strong>7</strong>.
+Avgiften är EUR 6, USD 8 eller 12 IRS.<br>
 
-<STRONG>8</STRONG>.
-Ansökningar för diploment skall skickas till diplomfunktionären:<BR>
+<strong>8</strong>.
+Ansökningar för diploment skall skickas till diplomfunktionären:<br>
 Denna post är för närvarande inte besatt.
 Diplomspekulanter bör sitta på sin ansökan tills dess att
 en ny diplomfunktionär offentliggörs.
 [<a href="#award_manager">Längre ner på sidan</a>
 står det vem diplomfunktionären är.
 Det är f.n. oklart om det är denna information eller informationen
-nedan är gammal. Översättarens anmärkning]<BR>
+nedan är gammal. Översättarens anmärkning]<br>
 
-<STRONG>9</STRONG>.
+<strong>9</strong>.
 Diplomfunktionärens beslut är slutgiltigt för alla ansökningar.
-</P>
+</p>
 
-<P><BR>
-<STRONG>Krav för diplomet</STRONG><BR>
-<STRONG>1</STRONG>.
+<p><br>
+<strong>Krav för diplomet</strong><br>
+<strong>1</strong>.
 Bekräftade kontakter på bara telegrafi.
 (Lyssnaramatörer - hörda telegrafistationer)
 med 100 olika stationer som är medlemmar i EuCW-klubbar,
 på tre olika amatörradioband med åtminstone 20 stationer
-körda eller hörda på varje ban.<BR>
+körda eller hörda på varje ban.<br>
 
-<STRONG>2</STRONG>. 
+<strong>2</strong>. 
 De 100 stationerna körda eller hörda på tre band
 måste inkludera åtminstone tre medlemmar från vardera av sex olika
-EuCW-klubbar.<BR>
+EuCW-klubbar.<br>
 
-<STRONG>3</STRONG>.
+<strong>3</strong>.
 Upp till 40 stationer körda eller hörda den 27:de April, 1991,
 på tvåhundraårsdagen av Samuel F.B. Morses födelse,
 kommer att räknas som dubbla kontakter.
-Alla andra krav är oförändrade.</P>
+Alla andra krav är oförändrade.</p>
 
-<P><BR>
-<STRONG>Diplomets klasser</STRONG><BR>
+<p><br>
+<strong>Diplomets klasser</strong><br>
 
-<STRONG>a</STRONG>) <STRONG>Vanliga diplomet</STRONG> -
-100 tvåvägskontakter genomförda med tillåten sändningseffekt.<BR>
+<strong>a</strong>) <strong>Vanliga diplomet</strong> -
+100 tvåvägskontakter genomförda med tillåten sändningseffekt.<br>
 
-<STRONG>b</STRONG>) <STRONG>QRP diplomet</STRONG> -
+<strong>b</strong>) <strong>QRP diplomet</strong> -
 100 tvåvägskontakter genomföra då ansökaren inte använder
-mer än 5 warr r.f. uteffekt.<BR>
+mer än 5 warr r.f. uteffekt.<br>
 
-<STRONG>c</STRONG>) <STRONG>Lyssnaramatördiplomet</STRONG> -
-100 hörda stationer oavsett effekt.</P>
+<strong>c</strong>) <strong>Lyssnaramatördiplomet</strong> -
+100 hörda stationer oavsett effekt.</p>
 
-<P><STRONG>Certifikat<BR></STRONG>
+<p><strong>Certifikat<br></strong>
 De attraktiva diplomcertifikaten är tryckta på tungt papper
 av pergamenttyp och har en bild av Europa 
-"på Samuel F.B. Morses tid".</P>
+"på Samuel F.B. Morses tid".</p>
 
-<P>Klicka <A href="imgsdpl/eucwa.gif">här</A>
-för att se diplomets utseende.</P>
+<p>Klicka <a href="imgsdpl/eucwa.gif">här</a>
+för att se diplomets utseende.</p>
 
-<P><a name="award_manager">EuCWdiplomfunktionär</a>:<BR>
+<p><a name="award_manager">EuCWdiplomfunktionär</a>:<br>
 DK7VW, Werner 'Joe' Jochem, Wendelsborn 34, D-66606 St. Wendel,
-E-mail:...joe (at-symbol) dk7vw.de...</P>
-<HR>
+E-mail:...joe (at-symbol) dk7vw.de...</p>
+<hr>
 
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</BODY>
-</HTML>
+</body>
+</html>
