--- a/se-eucwh.html
+++ b/se-eucwh.html
@@ -8,8 +8,7 @@ originalhref: eucwh.html
 <title>EuCWs historia</title>
 <link rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink= 
-"purple">
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <img src="imgs/eucwflag.gif" alt="">
 <h1>Europeiska CW-förbundets historia</h1>
 
