--- a/se-eunov.html
+++ b/se-eunov.html
@@ -5,17 +5,17 @@ originalhref: eunov.html
 <html>
 <head>
 <title>EuCWs nybörjardiplom</title>
-<LINK REL="SHORTCUT ICON" HREF="imgs/eucw.ico">
+<link REL="SHORTCUT ICON" href="imgs/eucw.ico">
 </head>
-<BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <table width="100%">
 <tr>
-<td align="LEFT"><img src="imgsclub/gqrp.gif" alt=""></td>
-<td align="CENTER">
+<td align="left"><img src="imgsclub/gqrp.gif" alt=""></td>
+<td align="center">
 <h1> Det europeiska CW-förbundet</h1>
 <h2 align="center">EuCWs Nybörjardiplom</h2>
 </td>
-<td align="RIGHT"><img src="imgs/eucwflag.gif" alt=""></td>
+<td align="right"><img src="imgs/eucwflag.gif" alt=""></td>
 </tr>
 </table>
 <p align="left"><strong>Tillgänglighet</strong><br>
@@ -56,15 +56,15 @@ A.D. Taylor, G8PG,<br>
 Greasby, Merseyside CH49 3ND,<br>
 England.</strong><br>
 <br>
-<HR>
+<hr>
 Tillhandahållandet av EuCWs Nybörjardiplom är ett bidrag från
 G-QRP klubben till de aktiviteter som Europeiska CW-förbundet,
 som finns till för att marknadsföra och uppmuntra amatörradiotelegrafi
 genom ömsesidigt samarbete och aktiviteter i medlemsklubbarna.<br>
-<HR>
-Klicka <A HREF="imgsdpl/eunov.gif">här</A>
+<hr>
+Klicka <a href="imgsdpl/eunov.gif">här</a>
 för att se diplomets utseende.
-<P>
+<p>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
