--- a/se-foc.html
+++ b/se-foc.html
@@ -2,14 +2,15 @@
 translated: 2007-05-14
 originalhref: foc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/foc.gif" ALT="" align=left></P>
-<P ALIGN=LEFT>
+<p><img src="imgsclub/foc.gif" alt="" align=left></p>
+<p align="left">
 <a href="http://www.firstclasscw.org.uk"><b>FOC:</b></a>
 <b>F</b>irst Class <b>O</b>perators <b>C</b>lub
-(Klubben för operatörer av första klass)<BR>
+(Klubben för operatörer av första klass)<br>
 <br>Vad är FOC?
 <br>
 FOC är en telegrafiklubb som är baserad i Storbrittanien
@@ -19,11 +20,12 @@ Klubben strävar efter hög kvalitet under radioaktiviteterna,
 kombinerat med att leva ett socialt liv,
 både i luften och tillsammans med familjen och medlemmar vid olika
 evenemang i världen.
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
