--- a/se-gacw.html
+++ b/se-gacw.html
@@ -2,54 +2,56 @@
 translated: 2007-05-14
 originalhref: gacw.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/gacw.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
-<A HREF="http://gacw.no-ip.org/"><b>GACW:</b>
+<p><img src="imgsclub/gacw.gif" alt="" align=left></p>
+</center><p align="left">
+<a href="http://gacw.no-ip.org/"><b>GACW:</b>
 Grupo Argentino de CW (Argentinska telegrafigruppen)
-</A>
-<P>
+</a>
+<p>
 Telegrafiklubb från Argentina som grundades 1977.
 Aktiviteterna omfattar en tävling (tredje söndagen i juni)
 och regelbundna DX-peditioner, speciellt till de antarktiska öarna
 och till LU-provinser med få telegrafioperatörer.
 De provinser du kan vilja köra är:
-<P>
-LU#A-C Bs. Aires Capital Federal<BR>
-LU#D,E Bs. Aires Provincia<BR>
-LU#F Santa Fe<BR>
-LU#GA-GO Chaco<BR>
-LU#GP-GZ Formosa<BR>
-LU#H Córboba<BR>
-LU#I Misiones <BR>
-LU#J Entre Rios<BR>
-LU#K Tucumán<BR>
-LU#L Corrientes<BR>
-LU#M Mendoza <BR>
-LU#N Santiago del Estero<BR>
-LU#O Salta<BR>
-LU#P San Juan<BR>
-LU#Q San Luís<BR>
-LU#R Catamarca<BR>
-LU#S La Rioja<BR>
-LU#T Jujuy<BR>
-LU#U La Pampa <BR>
-LU#V Rio Negro<BR>
-LU#W Chubut <BR>
-LU#XA-XO Santa Cruz<BR>
-LU#XP-XZ Tierra del Fuego <BR>
-LU#Z Antártida/Islas del Sur<BR>
-<P>
+<p>
+LU#A-C Bs. Aires Capital Federal<br>
+LU#D,E Bs. Aires Provincia<br>
+LU#F Santa Fe<br>
+LU#GA-GO Chaco<br>
+LU#GP-GZ Formosa<br>
+LU#H Córboba<br>
+LU#I Misiones <br>
+LU#J Entre Rios<br>
+LU#K Tucumán<br>
+LU#L Corrientes<br>
+LU#M Mendoza <br>
+LU#N Santiago del Estero<br>
+LU#O Salta<br>
+LU#P San Juan<br>
+LU#Q San Luís<br>
+LU#R Catamarca<br>
+LU#S La Rioja<br>
+LU#T Jujuy<br>
+LU#U La Pampa <br>
+LU#V Rio Negro<br>
+LU#W Chubut <br>
+LU#XA-XO Santa Cruz<br>
+LU#XP-XZ Tierra del Fuego <br>
+LU#Z Antártida/Islas del Sur<br>
+<p>
 Adress:
 GACW, Casilla de Correo 9, 1875 Wilde, Buenos Aires, Argentina
 E-mail:...gacw (AT-SYMBOL) lan.no-ip.org...
-<P>
+<p>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
 
