--- a/se-gqrp.html
+++ b/se-gqrp.html
@@ -2,23 +2,25 @@
 translated: 2007-05-14
 originalhref: gqrp.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/gqrp.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
-<A HREF="http://www.gqrp.com/">
-<b> G-QRP Club:</b> (Klubben G-QRP)</A> 
-<BR>
+<p><img src="imgsclub/gqrp.gif" alt="" align=left></p>
+</center><p align="left">
+<a href="http://www.gqrp.com/">
+<b> G-QRP Club:</b> (Klubben G-QRP)</a> 
+<br>
 Ägnad åt lågeffektförbindelser (upp till 5 watt likströmsinput).
 Klubben har tusentals medlemmar i hela världen och erbjuder ett
 brett spann av tjäsnter och aktiviteter däribland
 en mycket bra klubbtidning
 som alla hemmabyggare kommer att tycka är mycket intressant.
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
