--- a/se-gtc.html
+++ b/se-gtc.html
@@ -7,95 +7,94 @@ originalhref: gtc.html
 <head>
 <title>ECM@AGCW: Beskrivning av GTC (Grekland)</title>
 </head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink= 
-"purple">
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center>
 <hr width="100%">
 </center>
 
-<P><img src="imgsclub/gtc.jpg" ALT="" align=left></P>
+<p><img src="imgsclub/gtc.jpg" alt="" align=left></p>
 
-<p align="LEFT"> <b>GTC:</b> <b>G</b>reek <b>T</b>elegraphy <b>
+<p align="left"> <b>GTC:</b> <b>G</b>reek <b>T</b>elegraphy <b>
 C</b>lub (Grekiska telegrafiklubben)</p>
 
 <p>
 Följande brev skickades ut i telegrafivärlden för att presentera klubben.
-<BR CLEAR=LEFT>
+<br clear="left">
 </p>
-<P ALIGN="CENTER">
+<p align="center">
 Grekiska telegrafiklubben<br>
 (SV-CW-C) (Sedan 1998)<br>
 en medlem i EuCW<br>
 <b>HELLINIKI LESHI TILEGRAFIAS</b><br>
 ** MÅL, STADGAR och REGLER **<br>
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Aten, 3dje november 1998
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Kära telegrafivänner i hela världen...
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Den grekiska telegrafiklubben grundades i oktober 1998
 som en oberoende grekisk klub och vill åstadkomma:
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Att marknadsföra användningen av telegrafi på amatörradiobanden,
 att uppmuntra nykomlingar på telegrafi och
 att uppmuntra och bibehålla vänskap hos radiotelegrafioperatörer.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 GTC är också ett starkt tryck mot de krafter som vill utrota telegrafi
 som en amatörradiokommunikationsmod.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Innan vi bestämde oss för att samlas i en telegrafiklubb i vårt land,
 sökte vi under flera år efter vad grupper och organisationer
 med liknande mål gjort i Europa och på andra ställen och slutligen
 gjorde vi det för att stödja och dela den gemensamma kampen att
 marknadsföra, skydd och försvara telegrafins, särskilt under nuvarande
 omständigheter.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Här i SV-landet, är huvuddelen av amatörerna fortfarande långt ifrån
 tankarna att inte kräva telegrafi vid amatörradioproven,
 men eftersom saker kan ändras snabbt,
 vill vi samla tillräckligt med styrka för att kämpa emot alla
 nuvarande och framtida hot mot vår älskade telegrafi.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Även om Grekland är ett litet land finns det ett stort antal
 mycket erfarna telegrafioperatörer som under många år har varit
 till sjöss som radiooperatörer, i handelsflottan,
 som fortfarande idag är en av de största flottorna i världen.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Idag är många av dem radioamatörer,
 och telegrafioperatörer på amatörradiobanden,
 använder radiovågorna,
 och har kul när de kör sin favoritmod.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Lyckligtvis för oss finns det också ett stort antal nykomlingar
 som blir förälskade i morsekod.
 Vi tycker att det är en mycket viktig plikt för alla de gamla att
 hålla dessa i ständig kontakt med telegrafi,
 som en grundläggande sak i amatörradiovärlden.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 På ett möte vi hade för några dagar sedan,
 diskuterade vi frågor om diplom, tävlingar, websidebyggande mm och
 nu kan vi säga att många dessa saker kommer att lösas på ett bra sätt.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 För närvarande, som en ny systerklubb, kommer vi att deltaga i de
 aktiviteter som finns tillgängliga i EuCW-klubbarna, (dvs. tävlingar etc),
 och göra vårt bästa för att de aktiviteterna skall få framgång.
 [Språket är i detta stycke ganska egendomligt.
 Jag har försökt återskapa det jag tror menas men jag kan ha misstolkat.
 Översättarens anmärkning.]
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Vi vill också skapa goda relationer med ett ärligt och öppet samarbete,
 och nära kontakter mellan GTC (SV-CW-C) och stora EuCW-klubbar som,
 Deutscher Telegraphy Club e.V. (DL-CW-C) (Tyska telegrafiklubben),
@@ -106,44 +105,44 @@ Italian Telegraphy Club (Italienska telegrafiklubben) och
 andra,
 i syfte att förstärka och föra fram
 vår gemensamma marknadsföring av våra mål.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 GTC representerar telegrafins intressen i Grekland,
 genom dess samarbete med
 RAAG (Radio Amateur Assn of Greece) (den grekiska amatörradioföreningen),
 och också alla andra redan existerande mindre SV-klubbar.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Vår klubbs inriktning är mycket enkel.
 Vi är en oberoende organisation som uteslutande
 marknadsför telegrafins intressen inom amatörradion.
 Vi tillåter grekiska radioamatörer att bli medlemmar om de vill och
 det räcker med deras hedersord att de ställer upp på våra
 föresatser och håller med om våra mål.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 GTC erkänner att det finns många andra som har lika djupa intressen i
 denna förnämliga mod och bjuder in dem till att förhöra sig om medlemsskap.
 Detsamma gäller för utlänningar som vill gå med.
 Ingen avgift krävs av utlänningar.
 Medlemsskapet är helt gratis.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 Klubbens ledning består av alla de konstitutionerande medlemmarna,
 inte mindre än 22 personer.
 För att klubben skall fungera effektivt
 kommer ett verkställande utskott att tas fram.
-</P>
-<P ALIGN="LEFT">
+</p>
+<p align="left">
 73, de Yorgos SV1NA (för det verktställande utskottet i GTC)
-</P>
-<P ALIGN="RIGHT">
+</p>
+<p align="right">
 sv1na (at) hotmail.com
-</P>
-<P>
+</p>
+<p>
 SV - CW - Medlemmar
-</P>
-<P>
+</p>
+<p>
 <nobr>001 SV1LV Castor</nobr>,
 <nobr>002 SV1COM Oddy</nobr>,
 <nobr>003 SV1DU George</nobr>,
@@ -261,9 +260,9 @@ SV - CW - Medlemmar
 <nobr>115 DL1ATR Stefan</nobr>,
 <nobr>116 SV1EHD Sifis</nobr>,
 <nobr>117 F5NQL Maurice</nobr>,
-</P>
+</p>
 <hr>
-<P>
+<p>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 </p>
