--- a/se-hcc.html
+++ b/se-hcc.html
@@ -2,42 +2,44 @@
 translated: 2007-05-14
 originalhref: hcc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/hcc.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/hcc.gif" alt="" align=left></p>
+</center><p align="left">
 <b> HCC - Hispania CW Club (Spanska telegrafiklubben)
 </b>
-<P>
+<p>
 Sedan 1983 är denna klubb aktiv i Spanien och förespråkar telegrafikonsten.
 För närvarande är det ca 500 medlemmar.
 Medlemsskap är öppet för alla som har en spansk licens.
-<P>
+<p>
 Diplom
-<UL>
-<LI><STRONG>SPA</STRONG>:
+<ul>
+<li><strong>SPA</strong>:
 Pintores Españoles ("Guernika" y "la Maja Desnuda")
 också kallat SPA (Spanish Painters Award) (Spanska Konstnärers Diplom)
-<LI><STRONG>2CSM</STRONG>:
+<li><strong>2CSM</strong>:
 Segundo Centenario Samuel Morse (Samuel Morses andra århundrade)
-<LI><STRONG>DAEACW</STRONG>: Diploma Autonomías EACW
+<li><strong>DAEACW</strong>: Diploma Autonomías EACW
 (EACWs diplomet)
-</UL>
-<P>
+</ul>
+<p>
 Tävlingar:
-<UL>
-<LI>Encuentro con el vertical
-<LI>RAMI
-<LI>MARATON
-<LI>CRONOS
-</UL>
-<BR CLEAR=LEFT>
-<P>
+<ul>
+<li>Encuentro con el vertical
+<li>RAMI
+<li>MARATON
+<li>CRONOS
+</ul>
+<br clear="left">
+<p>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
 
