--- a/se-hsc.html
+++ b/se-hsc.html
@@ -3,12 +3,12 @@ translated: 2007-05-14
 originalhref: hsc.html
 ---
 <html>
-<BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
-<img src="imgsclub/hsc.gif" ALT="" align=left>
-<BR CLEAR=LEFT>
-<P><HR><P>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
+<img src="imgsclub/hsc.gif" alt="" align=left>
+<br clear="left">
+<p><hr><p>
 <a href="http://www.hsc.de.cx/"><b>HSC:</b></a>
-<b>H</b>igh <b>S</b>peed <b>C</b>lub (Höghastighetsklubben)<BR>
+<b>H</b>igh <b>S</b>peed <b>C</b>lub (Höghastighetsklubben)<br>
 är för vänner av medelhöga telegrafihastigheter,
 dvs. 25 wpm (125 tecken/min) och däröver.
 Det finns ingen årlig avgift.
@@ -17,20 +17,21 @@ Det enda sättet att bli medlem är via
 QSO i höghastighets med 5 olika HSC-medlemmar för intygande.
 Dessa intygande QSO måste bekräftas av QSL som beskriver hastigheten
 och längden på QSO:et.
-<P>
-Websidor:<BR CLEAR="left">
-<img src="flags/de.gif" ALT="" align=left>
+<p>
+Websidor:<br clear="left">
+<img src="flags/de.gif" alt="" align=left>
 <a href="http://www.hsc.de.cx/">
- Tyskland (på tyska med engelska översättningar) <BR CLEAR="left">
-</A>
-<img src="flags/nl.gif" ALT="" align=left>
+ Tyskland (på tyska med engelska översättningar) <br clear="left">
+</a>
+<img src="flags/nl.gif" alt="" align=left>
 <a href="http://www.morsecode.nl/hscn.html"> 
  Nederländerna (på engelska)
-</A>
-<P><HR><P>
+</a>
+<p><hr><p>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
 
