--- a/se-index.html
+++ b/se-index.html
@@ -5,109 +5,108 @@ translated: 2007-05-14
 originalhref: index.html
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<HTML>
-<HEAD>
-<TITLE>EuCW</TITLE>
-<META charset="UTF-8">
-<LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
-</HEAD>
-<BODY bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
-"purple">
-<TABLE width="100%" border="0" cellpadding="2">
-<TR valign="top">
-<TD bgcolor="#0000FF" width="152" align="left">
-<P><FONT color="#FFFFFF"><IMG src="imgs/eucwflag.gif" width="152"
-height="152" alt="EuCW Logo"></FONT></P>
+<html>
+<head>
+<title>EuCW</title>
+<meta charset="UTF-8">
+<link rel="SHORTCUT ICON" href="imgs/eucw.ico">
+</head>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
+<table width="100%" border="0" cellpadding="2">
+<tr valign="top">
+<td bgcolor="#0000FF" width="152" align="left">
+<p><font color="#FFFFFF"><img src="imgs/eucwflag.gif" width="152"
+height="152" alt="EuCW Logo"></font></p>
 
-<P><IMG src="flags/se.gif" alt="på Svenska"></P>
+<p><img src="flags/se.gif" alt="på Svenska"></p>
 
-<P><A href="se-news.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">Nyheter</FONT></A></P>
+<p><a href="se-news.html"><font face="Arial, Helvetica, sans-serif"
+size="+1" color="#FFFFFF">Nyheter</font></a></p>
 
-<P><A href="se-eucw.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">Medlemsklubbar</FONT></A></P>
+<p><a href="se-eucw.html"><font face="Arial, Helvetica, sans-serif"
+size="+1" color="#FFFFFF">Medlemsklubbar</font></a></p>
 
-<P><A href="se-liaison.html"><FONT face=
+<p><a href="se-liaison.html"><font face=
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF">
-Associerade klubbar</FONT></A></P>
+Associerade klubbar</font></a></p>
 
-<P><A href="se-eunov.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">Nybörjardiplom</FONT></A></P>
+<p><a href="se-eunov.html"><font face="Arial, Helvetica, sans-serif"
+size="+1" color="#FFFFFF">Nybörjardiplom</font></a></p>
 
-<P><A href="se-eucwa.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">EuCW-diplom</FONT></A></P>
+<p><a href="se-eucwa.html"><font face="Arial, Helvetica, sans-serif"
+size="+1" color="#FFFFFF">EuCW-diplom</font></a></p>
 
-<P><A href="se-eucwh.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">Historia</FONT></A></P>
+<p><a href="se-eucwh.html"><font face="Arial, Helvetica, sans-serif"
+size="+1" color="#FFFFFF">Historia</font></a></p>
 
-<P><A href="se-officers.html"><FONT face=
+<p><a href="se-officers.html"><font face=
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF">
-Funktionärer</FONT></A></P>
+Funktionärer</font></a></p>
 
-<P><A href="se-eucons.html"><FONT face=
+<p><a href="se-eucons.html"><font face=
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF" align=
-"center">Syfte</FONT></A></P>
+"center">Syfte</font></a></p>
 
-<P><A href="se-eucwp.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">EuCW FP-aktivitet</FONT></A></P>
+<p><a href="se-eucwp.html"><font face="Arial, Helvetica, sans-serif"
+size="+1" color="#FFFFFF">EuCW FP-aktivitet</font></a></p>
 
-<P><A href="se-euskd.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">Handpumpsdag</FONT></A></P>
+<p><a href="se-euskd.html"><font face="Arial, Helvetica, sans-serif"
+size="+1" color="#FFFFFF">Handpumpsdag</font></a></p>
 
-<P><A href="se-euqrs.html"><FONT face=
-"Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF">QRS-veckan</FONT></A></P>
+<p><a href="se-euqrs.html"><font face=
+"Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF">QRS-veckan</font></a></p>
 
-<P><A href="se-eu160.html"><FONT face=
+<p><a href="se-eu160.html"><font face=
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF">160m party
-</FONT></A></P>
+</font></a></p>
 
-</TD>
-<TD width="100%">
-<H1 align="center">Det europeiska CW-förbundet<BR>
+</td>
+<td width="100%">
+<h1 align="center">Det europeiska CW-förbundet<br>
  The European CW Association
-</H1>
+</h1>
 
-<P align="left"><IMG src="flags/de.gif" width= "30" height="20"
-alt=""><A href="http://www.agcw.org/eucw/index.html">
-<FONT size="-1">Tyska (orginalsidorna, finns hos AGCW-DL)<FONT></A><BR> 
-<P align="left"><IMG src="flags/uk.gif" width= "30" height="20"
-alt=""><A href="http://www.agcw.org/eucw/english.html">
-<FONT size="-1">Engelska (finns hos AGCW-DL)<FONT></A><BR>
-<IMG src="flags/eo.gif" width= "30" height="20" alt="">
-<A href="olang.html"><FONT size="-1">Esperanto (översättningen saknas)</FONT></A><BR>
-<IMG src="flags/fr.gif" width= "30" height="20" alt="">
-<A href="olang.html"><FONT size="-1">Franska (översättningen saknas)</FONT></A><BR>
-<IMG src="flags/it.gif" width= "30" height="20" alt="">
-<A href="olang.html"><FONT size="-1">Italienska (översättningen saknas)</FONT></A><BR>
-<IMG src="flags/es.gif" width= "30" height="20" alt="">
-<A href="http://www.ea3re.com/eacwclub/paginas/eucw_castellano.html">
-<FONT size="-1">Katalanska (Finns hos EACW)</FONT></A><BR>
+<p align="left"><img src="flags/de.gif" width= "30" height="20"
+alt=""><a href="http://www.agcw.org/eucw/index.html">
+<font size="-1">Tyska (orginalsidorna, finns hos AGCW-DL)<font></a><br> 
+<p align="left"><img src="flags/uk.gif" width= "30" height="20"
+alt=""><a href="http://www.agcw.org/eucw/english.html">
+<font size="-1">Engelska (finns hos AGCW-DL)<font></a><br>
+<img src="flags/eo.gif" width= "30" height="20" alt="">
+<a href="olang.html"><font size="-1">Esperanto (översättningen saknas)</font></a><br>
+<img src="flags/fr.gif" width= "30" height="20" alt="">
+<a href="olang.html"><font size="-1">Franska (översättningen saknas)</font></a><br>
+<img src="flags/it.gif" width= "30" height="20" alt="">
+<a href="olang.html"><font size="-1">Italienska (översättningen saknas)</font></a><br>
+<img src="flags/es.gif" width= "30" height="20" alt="">
+<a href="http://www.ea3re.com/eacwclub/paginas/eucw_castellano.html">
+<font size="-1">Katalanska (Finns hos EACW)</font></a><br>
 
-<HR>
-<TABLE width="100%" border="0" cellpadding="2">
-<TR valign="top">
-<TD width="50%">
-<P>
-<A href="http://www.morsecode.nl/eucw.html" target="_blank">EuCW</A>
+<hr>
+<table width="100%" border="0" cellpadding="2">
+<tr valign="top">
+<td width="50%">
+<p>
+<a href="http://www.morsecode.nl/eucw.html" target="_blank">EuCW</a>
 är ett förbund av europeiska telegrafiklubbar.
-</P>
+</p>
 
-<P>
+<p>
 Organisationens mål är att skapa ett förbund av oberoende europeiska
 amatörradio telegrafiklubbar.
 Genom arbetet i förbundet kan medlemsklubbarna utbyta idéer och information,
 organisera olika aktiviteter med ömsesidigt utbyte,
 och samarbeta för amatörradiotelegrafins bästa.
-</P>
+</p>
 
-<P>
+<p>
 Medlemmar i EuCW är inte enskilda personer utan europeiska telegrafiklubbar,
 dvs. rena CW-klubbar och också QRP-klubbar som på ett naturligt sätt ofta
 värdesätter CW.
 Också icke-europeiska organisation kan vara associerade med EuCW.
-</P>
+</p>
 
-<P>
+<p>
 Varje medlemsförening utser en representant som kallas
 ECM (EuCW Communications Manager)
 för att hantera kommunikationen med EuCW.
@@ -115,29 +114,29 @@ för att hantera kommunikationen med EuCW.
 Dessa web-sidor underhålls av ECM för AGCW (Martin, ik2rmz) med stöd av
 Tom (hb9dod at agcw.de, som koordinerar ON och PA) och
 Micha (df4wx).
-</P>
+</p>
 
-<P>&nbsp;</P>
-</TD>
-<TD width="1" bgcolor="#999999">&nbsp;</TD>
-<TD width="50%">
-<P>
+<p>&nbsp;</p>
+</td>
+<td width="1" bgcolor="#999999">&nbsp;</td>
+<td width="50%">
+<p>
 AGCW är en av de största tyska telegrafiklubbarna.
 Huvudsyftet med klubben är att uppmuntra och stödja morse inom amatörradio.
 Den grundades 1971 och har ca 2000 medlemmar, främst i tyskland men också
 i andra länder.
-</P>
+</p>
 
-<P>
+<p>
 Vi [AGCW, Översättarens anmärkning]) välkomnar nybörjare och
 är ivriga att visa dem det äldsta och troligen vackraste
 moden inom amatörradio.
 
 Vi hjälper dem över passivitetströskeln (och att klara morseprovet)
 som hindrar andra att vara med.
-</P>
+</p>
 
-<P>
+<p>
 AGCW organiserar CW Contents och ger ut CW-diplom för att uppmuntra
 CW på banden.
 Vi distribuerar en tryckt tidning "AGCW-Info" (på tyska) två gånger om året
@@ -146,39 +145,39 @@ testresultat,
 och andra intressanta bidrag.
 Vi sänder också ut QTC via radio på CW och paketradio,
 på nyhetsgruppen de.comm.ham och på denna hemsida.
-</P>
+</p>
 
-<P>&nbsp;</P>
-</TD>
-</TR>
-</TABLE>
+<p>&nbsp;</p>
+</td>
+</tr>
+</table>
 
-<TABLE width="100%" border="0" cellpadding="2">
-<TR>
-<TD>
-EuCWs officiella språk är <I>Engelska</I>,
+<table width="100%" border="0" cellpadding="2">
+<tr>
+<td>
+EuCWs officiella språk är <i>Engelska</i>,
 och därför är utgångspunkten att all information först bara finns
 tillgänglig på Engelska.
 [Här finns, i den tyska varianten,
 en ursäkt om att inte allt är översatt till tyska men den är ointressant
 för den svenska publiken. Översättarens anmärkning.]
 
-<P><FONT size="-1">Senast uppdaterad: <A href="se-news.html">tryck här.</A><BR>
+<p><font size="-1">Senast uppdaterad: <a href="se-news.html">tryck här.</a><br>
 Skicka kommentarer på innehållet till ECM i AGCW (Email: EuCW (at) agcw . de).
-</FONT></P>
+</font></p>
 
-<P>
-<FONT size="-1">73 de IK2RMZ
-AGCW 897</FONT>
-<IMG src="imgs/email.gif" width= "400" height="56" alt="eucw à agcw.de">
-</P>
-</TD>
-<TD align="RIGHT">
-<IMG src="imgs/agcwecm.gif" alt=""></TD>
-</TR>
-</TD>
-</TR>
-</TABLE>
+<p>
+<font size="-1">73 de IK2RMZ
+AGCW 897</font>
+<img src="imgs/email.gif" width= "400" height="56" alt="eucw à agcw.de">
+</p>
+</td>
+<td align="right">
+<img src="imgs/agcwecm.gif" alt=""></td>
+</tr>
+</td>
+</tr>
+</table>
 {% include translated.html %}
-</BODY>
-</HTML>
+</body>
+</html>
