--- a/se-inorc.html
+++ b/se-inorc.html
@@ -3,46 +3,46 @@ translated: 2007-05-14
 originalhref: inorc.html
 ---
 <html>
-<BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/inorc.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/inorc.gif" alt="" align=left></p>
+</center><p align="left">
 <ul>
-<A HREF="http://www.inorc.it/">
-<b>INORC: Italian Naval "Old Rhythmers" Club (Italienska Flottans Gamla Rytm-klubben)<BR></b></A>
-<P>
+<a href="http://www.inorc.it/">
+<b>INORC: Italian Naval "Old Rhythmers" Club (Italienska Flottans Gamla Rytm-klubben)<br></b></a>
+<p>
 Klubb för före detta professionella från marinen.
 Klubben har sin egen
-<A HREF="http://www.geocities.com/SiliconValley/Lakes/1018/inorcring.html">
-web ring</A>.
-<P>
+<a href="http://www.geocities.com/SiliconValley/Lakes/1018/inorcring.html">
+web ring</a>.
+<p>
 Detta är lite text som är klippt från den officiella INORC-websidan.
-<P>
+<p>
 CITAT
-<P>
+<p>
 I.N.O.R.C.   M E D L E M M A R
-<P>
+<p>
 I.N.O.R.C. består av tre kategorier:
 Vanliga medlemmar,
 associerade medlemmar, och
 hedersmedlemmar.
-<P>
+<p>
 Vanliga medlemmar är de som har varit eller fortfarande är yrkesverksamma
 i flottan eller handelsflottan, eller inom telekommunikation,
 licensierade radioamatörer och/eller lyssnaramatör och duktig i telegrafist.
-<P>
+<p>
 De associerade medlemmarna är de som arbetar eller har arbetat inom
 telekommunikation, att arbeta med utbredning av telegrafi
 och licensierade radioamatörer och/eller lyssnaramatör och duktig i telegrafi.
-<P>
+<p>
 Hedersmedlemmar är de som,
 genom sin status eller sina vetenskapliga framgångar inom telekommunikation,
 förhöjer klubbens anseende.
 Hedersmedlemmar är också alla före detta ordförande i INORC.
-<P>
+<p>
 SLUT CITAT
-<P>
+<p>
 Email:...i1qod (at-tecknet) Lnet . it...
 </ul>
 <center> <hr width="100%"> </center>
@@ -50,4 +50,5 @@ Email:...i1qod (at-tecknet) Lnet . it...
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
