--- a/se-isqrp.html
+++ b/se-isqrp.html
@@ -2,23 +2,25 @@
 translated: 2007-05-14
 originalhref: isqrp.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/isqrp.gif" ALT="" align=center></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/isqrp.gif" alt="" align=center></p>
+</center><p align="left">
 <ul>
-<A HREF="http://www.sardiniaqrp.com">
-<b>IS-QRP: </b>Associazione Radioamatoriale Sardinia QRP Club</A>
+<a href="http://www.sardiniaqrp.com">
+<b>IS-QRP: </b>Associazione Radioamatoriale Sardinia QRP Club</a>
 (Sardiniens radioamatörförenings QRP-klubb)
-<P>
+<p>
 Lågeffektklubb från Sardinien.
 Mottot är: "Bygg, Lär, Lär ut".
-<P>
+<p>
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
