--- a/se-itc.html
+++ b/se-itc.html
@@ -2,31 +2,33 @@
 translated: 2007-05-14
 originalhref: itc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/itc.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/itc.gif" alt="" align=left></p>
+</center><p align="left">
 <ul>
-<A HREF=" http://www.italiantelegraphyclub.net/">
-<b>ITC: I</b>talian <b>T</b>elegraphy <b>C</b>lub</A> 
-Italienska telegrafiklubben<BR>
+<a href=" http://www.italiantelegraphyclub.net/">
+<b>ITC: I</b>talian <b>T</b>elegraphy <b>C</b>lub</a> 
+Italienska telegrafiklubben<br>
 (kallas också "Radiotelegrafisti")
-<P>
+<p>
 Detta var tidigare en mötesplats som ARI-medlemmar kunde vara med på
-om telegrafi var deras favoritmod.<BR>
+om telegrafi var deras favoritmod.<br>
 Nu är det en internationell klubb som innehåller utlänska medlemmar.
-<P>
-Klubben sköts av:<BR>
-   IN3VST<BR>
-   Vito Vetrano<BR>
-   Via Verdi 27/A<BR>
-   I-39012 Meran (BZ)<BR>
-<P>
+<p>
+Klubben sköts av:<br>
+   IN3VST<br>
+   Vito Vetrano<br>
+   Via Verdi 27/A<br>
+   I-39012 Meran (BZ)<br>
+<p>
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
