--- a/se-lzcwc.html
+++ b/se-lzcwc.html
@@ -2,17 +2,18 @@
 translated: 2007-05-14
 originalhref: lzcwc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/lzcwc.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/lzcwc.gif" alt="" align=left></p>
+</center><p align="left">
 <ul>
 <b>LZCWC: </b>LZ CW Club - Contest group
 LZ telegrafiklubben - tävlingsgruppen
-<BR>
-<P>
-<PRE>
+<br>
+<p>
+<pre>
 E-ADDRESS: lz2au (at) qsl . net
 
 Antoaneta Encheva, LZ2AU
@@ -23,7 +24,7 @@ BULGARIA
 WWW:  http://web.orbitel.bg/lzcwc/
       http://www.geocities.com/lzcwclub/
 
-</PRE>
+</pre>
 Notera klubbens aktiviteter:
 Rundabordet varje tisdag klockan 18.00Z på 3527 kHz,
 nätkontrollstation är LZ9CWC,
@@ -34,11 +35,12 @@ En minitävling den sista tosdagen i månaden
 18.00-19.00Z 3530-3570 kHz.
 LZCWC ger till medlemmar ut ett certifikat för enastående telegrafikörande.
 Nomineringar och röstningar sker vid rundaborden.
-<P>
+<p>
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
