--- a/se-oecwg.html
+++ b/se-oecwg.html
@@ -2,32 +2,33 @@
 translated: 2007-05-14
 originalhref: oecwg.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 
-<P><img src="imgsclub/oecwg.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
-<!--- A HREF="http://" --->
-<B>OE-CW-Gemeinschaft,</B> (OE-telegrafiklubben)
+<p><img src="imgsclub/oecwg.gif" alt="" align=left></p>
+</center><p align="left">
+<!--- A href="http://" --->
+<b>OE-CW-Gemeinschaft,</b> (OE-telegrafiklubben)
 
 <!/A> 
 Österrikisk klubb för telegrafientusiaster.
 
-<P>
+<p>
 Den främsta Österrikiska telegrafiintressegruppen
-<P>
+<p>
 skulle vilja presentera sig
-<P>
+<p>
 Morsetelegrafi är den äldsta och mest traditionella formen av 
 fjärrkommunikation men tyvärr har dess era tagit slut
 inom den kommerciella radiotjänsten såväl som inom sjöfarten.
-<P>
+<p>
 Om flera tusen radioamatörer i hela världen fortfarande använder sin
 telegrafinyckeln, är det inte bara på grund av entusiasters nostalgi
 utan för att telegrafin, såsom är allmänt erkänt, möjliggör
 global kommunikation med enkla medeln även under ofördelaktiga förhållanden.
-<P>
+<p>
 För att tillhandahålla ett hem åt alla radioamatörer som vill använda
 sin nyckel åtminstone då och då eller - ännu bättre - för att ge förtur
 åt telegrafikommunikation i allmänhet har
@@ -39,34 +40,35 @@ en intressegrupp för radiotelegrafi vars mål är att marknadsföra
 förbättringar av telegrafiteknik och uppmuntra användandet av telegrafi
 och därigenom försöka etablera kontakter och vänskap mellan radioamatörer
 i hela världen.
-<P>
+<p>
 För alla som vill gå med i klubben gäller följande enkla ansökningsprocedur:
-<P>
+<p>
 1. Skicka in en informell ansökan om medlemsskap i OE-CW-G
-<P>
+<p>
 2. För att uppmuntra användandet av telegrafi på banden, skicka med
 20 QSL-kort som bekräftar telegrafikontakter.
-<P>
+<p>
 3. Genomför en kontakt (QSO) på någon av sked-kvällarna
-<P>
+<p>
 4. För att täcka kostnader för utskrifter och porto, lägg in 8 IRCs
 eller passande värde i utlänsk valuta
 (medlemsskapet gäller tillsvidare och inga ytterligare avgifter samlas in).
-<P>
-<PRE>
+<p>
+<pre>
 Kontaktperson: OE6FYG
  Herbert Lafer
  Speltenbach 55
  A-8280 Fürstenfeld
-</PRE>
-<P>
+</pre>
+<p>
 Månatligt QTC på tyska:
 Den första lördagen varje månad på 3575 klockan 8 lokal tid.
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
