--- a/se-op.html
+++ b/se-op.html
@@ -10,8 +10,7 @@ translated: 2024-03-31
   <link rel="SHORTCUT ICON" href="eucw.ico">
 </head>
 
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
-"purple">
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
   <table width="100%">
     <tr>
       <td align="left"><img src="eucwflag.gif" alt=""></td>
@@ -25,7 +24,7 @@ translated: 2024-03-31
       <td align="right"><img src="eucwflag.gif" alt=""></td>
     </tr>
   </table>
-<h2>Språkversioner av tips för hur man kör telegrafi:</H2>
+<h2>Språkversioner av tips för hur man kör telegrafi:</h2>
 <h3>Senast uppdaterat 2016-09-21</h3>
 
 De är språken är de olika medlemsklubbarnas huvudspråk:
@@ -130,7 +129,7 @@ Tänk på att all text på eucw.org tillhör public domain.
 <p>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="dp.pdf"><FONT size="-2">Integritets-policy (ej översatt)</FONT></a>
+<a href="dp.pdf"><font size="-2">Integritets-policy (ej översatt)</font></a>
 
 {% include translated.html %}
 
