--- a/se-rtc.html
+++ b/se-rtc.html
@@ -2,17 +2,18 @@
 translated: 2007-05-14
 originalhref: rtc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 
-<P><img src="imgsclub/rtc.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
-<A HREF="http://www.rtc-dl.de/"><b>RTC:</b></A>
+<p><img src="imgsclub/rtc.gif" alt="" align=left></p>
+</center><p align="left">
+<a href="http://www.rtc-dl.de/"><b>RTC:</b></a>
 <b>RTC:</b>
-<B>R</B>adio <B>T</B>elegraphy <B>C</B>lub (Radiotelegrafiklubben)<P>
+<b>R</b>adio <b>T</b>elegraphy <b>C</b>lub (Radiotelegrafiklubben)<p>
 
-Motto: <B>CWFE</B> CW forever (Telegrafi för evigt)<P>
+Motto: <b>CWFE</b> CW forever (Telegrafi för evigt)<p>
 Grundades 1990-03-10 av 18 telegrafientusiaster i före detta DDR (Y2).
 Målet är att bevara, odla och uppmuntra användandet av telegrafi
 i amatörradio.
@@ -33,11 +34,12 @@ Ansökningsavgiften är 5 Euro eller US$.<p>
 
 Klubben aktiveter klubbstationerna DKØRTC and DLØRTC.
 Tre diplom ges ut nämligen W-RTC-M, CWD, CWAA. 
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
