--- a/se-ruqrp.html
+++ b/se-ruqrp.html
@@ -2,15 +2,16 @@
 translated: 2007-05-14
 originalhref: ruqrp.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/ruqrp.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/ruqrp.gif" alt="" align=left></p>
+</center><p align="left">
 <ul>
-<b>RUQRP: </b>RU QRP Club (Ryska lågeffektsklubben)<BR>
-<P>
-<PRE>
+<b>RUQRP: </b>RU QRP Club (Ryska lågeffektsklubben)<br>
+<p>
+<pre>
 Den ryska klubben för QRP-entusiaster.
 
 Kontaktperson:
@@ -21,12 +22,13 @@ Web RU-QRP klubben: www.qrp.ru
 
 
 UE3QRP & RU9QRP/9  HQ-stationer
-</PRE>
-<P>
+</pre>
+<p>
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
