--- a/se-scag.html
+++ b/se-scag.html
@@ -2,26 +2,28 @@
 translated: 2007-05-14
 originalhref: scag.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 
-<P><img src="imgsclub/scag.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
-<A HREF="http://www.scag.se/"><b>SCAG:</b></A>
-<B>S</B>candianvian <B>C</B>W <B>A</B>ctivity <B>G</B>roup 
-(Skandinaviska telegrafiaktivitetsgruppen)<P>
-<P>
-Motto: <B>To support and Encourage Amateur Radio CW</B>
-Att stödja och uppmuntra amatörradiotelegrafi<P>
+<p><img src="imgsclub/scag.gif" alt="" align=left></p>
+</center><p align="left">
+<a href="http://www.scag.se/"><b>SCAG:</b></a>
+<b>S</b>candianvian <b>C</b>W <b>A</b>ctivity <b>G</b>roup 
+(Skandinaviska telegrafiaktivitetsgruppen)<p>
+<p>
+Motto: <b>To support and Encourage Amateur Radio CW</b>
+Att stödja och uppmuntra amatörradiotelegrafi<p>
 Tillåter icke-skandinaver som medlemmar men det mesta av den tryckta
 bulletinen "SCAG-NL" är skriven på danska eller svenska
 (men en engelsk sammanfattning finns med).
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
