--- a/se-shsc.html
+++ b/se-shsc.html
@@ -2,19 +2,21 @@
 translated: 2007-05-14
 originalhref: shsc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
-<P><img src="imgsclub/shsc.gif" ALT="" align=left></P>
-<P ALIGN=LEFT>
+<p><img src="imgsclub/shsc.gif" alt="" align=left></p>
+<p align="left">
 <a href="http://www.morsecode.nl/shscn.html"><b>SHSC:</b></a>
 <b>S</b>uper <b>H</b>igh <b>S</b>peed <b>C</b>lub
-(Superhöghastighetsklubben)<BR>
+(Superhöghastighetsklubben)<br>
 är en höghastighetsklubb för vänner av telegrafi i minst 250-takt (50 WPM).
-</P><br>
-<P><HR><P>
+</p><br>
+<p><hr><p>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
 
