--- a/se-ucwc.html
+++ b/se-ucwc.html
@@ -2,23 +2,25 @@
 translated: 2007-05-14
 originalhref: ucwc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
-<HR>
-<P><img src="imgsclub/ucwc.gif" ALT=""></P>
-<A HREF="http://morse.cjb.net">
-<B>UCWC</B></A> 
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
+<hr>
+<p><img src="imgsclub/ucwc.gif" alt=""></p>
+<a href="http://morse.cjb.net">
+<b>UCWC</b></a> 
 THE MORSE RADIOTELEGRAPHY CLUB "UCWC" - 
 MEZHDUNARODNYJ RADIOTELEGRAFNYJ KLUB KOROTKOVOLNOVIKOV
 (Morseradiotelegrafiklubben)
-<P>
+<p>
 HQ: UCWC, P.O.BOX 28, 250000 Chernigov-Postamt, Ukraina OSS.
-<P>
+<p>
 OSS. klubb för telegrafientusiaster.
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
