--- a/se-ylcwg.html
+++ b/se-ylcwg.html
@@ -2,24 +2,26 @@
 translated: 2007-05-14
 originalhref: ylcwg.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 
-<P><img src="imgsclub/ylcwg.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
-<!--- A HREF="http://www.muenster.de/~df7qk/ylcwg.htm" --->
-<B>YL-CW-Group,</B>
-<!/A> 
+<p><img src="imgsclub/ylcwg.gif" alt="" align=left></p>
+</center><p align="left">
+<!--- a href="http://www.muenster.de/~df7qk/ylcwg.htm" --->
+<b>YL-CW-Group,</b>
+<!/a> 
 
 En klubb för tjejer och kvinnor.
 Förespråkar telegrafi i den kvinnliga amatörradiogemenskapen.
 
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
