--- a/se-agcw.html
+++ b/se-agcw.html
@@ -2,29 +2,30 @@
 translated: 2007-05-14
 originalhref: agcw.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/agcw.gif" align=left ALT=""></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/agcw.gif" align=left alt=""></p>
+</center><p align="left">
 <ul><a href="http://www.agcw.de/"><b>AGCW:</b></a>
-<b>A</b>ctivity <b>G</b>roup <b>CW-DL</b> <BR>
+<b>A</b>ctivity <b>G</b>roup <b>CW-DL</b> <br>
 är en telegrafiklubb från tyskland.
 Den har ca 2000 medlemmar och de flesta av dem finns i 
 tysktalande länder.
 Klubbens ger ut en tidning två gånger om året skriven på tyska.
-</P>
-<P ALIGN=LEFT>
+</p>
+<p align="left">
 [Översättarens anmärkning:
 Information om att AGCW ECM är ansvarig för dessa websidor är
 utelämnad i den svenska översättningen.]
-</P>
-<P ALIGN=LEFT>
+</p>
+<p align="left">
 Medlemsskap i AGCW är öppet för alla telegrafivänner.
 AGCW har nära relationer med den vanliga amatörradioklubben i tyskland -
 <a href="http://www.darc.de">DARC</a>. 
-<BR CLEAR=LEFT>
-</P>
+<br clear="left">
+</p>
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
@@ -32,4 +33,5 @@ AGCW har nära relationer med den vanliga amatörradioklubben i tyskland -
 
 {% include translated.html %}
 
-</body></html>
+</body>
+</html>
