--- a/se-arci.html
+++ b/se-arci.html
@@ -2,20 +2,22 @@
 translated: 2007-05-14
 originalhref: arci.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/arci.gif" ALT="" align=left></P>
-<P ALIGN=LEFT>
+<p><img src="imgsclub/arci.gif" alt="" align=left></p>
+<p align="left">
 <a href="http://www.qrparci.org"><b>QRP-ARCI:</b></a><br>
 
 Detta är en av våra vän-klubbar utanför europa.
 Det är en stor amerikansk klubb som ägnar sig åt lågeffekt-QRP.
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 
-</body></html>
+</body>
+</html>
