--- a/se-eacw.html
+++ b/se-eacw.html
@@ -2,51 +2,53 @@
 translated: 2007-05-14
 originalhref: eacw.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/eacw.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
-<A HREF="http://eacwclub.esp.st"><b>EACW:</b>
-</A>
-EA CW Club<BR>
+<p><img src="imgsclub/eacw.gif" alt="" align=left></p>
+</center><p align="left">
+<a href="http://eacwclub.esp.st"><b>EACW:</b>
+</a>
+EA CW Club<br>
 Telegrafiklubb som är mycket aktiv i Spanien och spansktalande länder.
 Medlemsskapet är gratis och klubben är ganska aktiv på Internet.
-<P>
+<p>
 Klubben grundades av EA4WH Jorge och EA4DXY Vicenta in september 2001.
-<P>
+<p>
 För att gå med i klubben måste du tillhandahålla bevis för att du har
 kontaktat ett antal spanska stationer på telegrafi.
 Det är dock inte ett explicit krav att prata spanska,
 men om du vill bidra aktivt till klubblivet rekommenderas att du
 kan läsa spanska.
-<P>
+<p>
 Sekreterare:
-<PRE>
+<pre>
     Vicenta Santos Ropero, EA4DXY
     P. O. Box 45
     E-13320 Villanueva de los Infantes, Ciudad Real
-</PRE>
+</pre>
 Ordföranden i EACW är:
-<PRE>
+<pre>
     Jorge Arcos Pavon, EA4WH
     P. O. Box 45
     E-13320 Villanueva de los Infantes, Ciudad Real
-</PRE>
+</pre>
 Konktatperson, webmaster och mailinglistadministrator är
-<PRE>
+<pre>
     Tony Herrera Caro, ea3re(at)yahoo.es
     Travesera de Montigala , 48 4 A
     E-08917 Badalona, Barcelona
-</PRE>
+</pre>
 
 
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
 
