--- a/se-ehsc.html
+++ b/se-ehsc.html
@@ -2,19 +2,21 @@
 translated: 2007-05-14
 originalhref: ehsc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
-<P><img src="imgsclub/ehsc.gif" ALT="" align=left></P>
-<P ALIGN=LEFT>
+<p><img src="imgsclub/ehsc.gif" alt="" align=left></p>
+<p align="left">
 <a href="http://www.morsecode.nl/ehscn.html"><b>EHSC:</b></a>
 <b>E</b>xtremely <b>H</b>igh <b>S</b>peed <b>C</b>lub
-(Extremt hög hastighetsklubben)<BR>
+(Extremt hög hastighetsklubben)<br>
 är en höghastighetstelegrafiklubb för 
 de som gillar telegrafi i hastigheter på åtminstone 60 wpm
 (300 tecken/min (PARIS) [Översättarens anmärkning])
-<P><HR><P>
+<p><hr><p>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
