--- a/se-euqrs.html
+++ b/se-euqrs.html
@@ -7,8 +7,7 @@ originalhref: euqrs.html
 <title>EuCWs QRS-vecka</title>
 <link rel="SHORTCUT ICON" href="eucw.ico">
 </head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
-"purple">
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <table width="100%">
 <tr>
 <td align="left"><img src="eucwflag.gif" alt=""></td>
@@ -303,9 +302,9 @@ stationerna.</p>
 <a href="https://eucw.org/euqrs22.html">2022</a>
 <a href="https://eucw.org/euqrs23.html">2023</a> 
 </p>
-<P>
+<p>
 EuCWs QRS-vecka sponsras och organiseras av AGCW-DL.
-<a href="https://eucw.org/dp.pdf"><FONT size="-2">Integritetspolicy (ej översatt)</FONT></a>
+<a href="https://eucw.org/dp.pdf"><font size="-2">Integritetspolicy (ej översatt)</font></a>
 {% include translated.html %}
 </body>
 </html>
