--- a/se-fists.html
+++ b/se-fists.html
@@ -2,35 +2,37 @@
 translated: 2007-05-14
 originalhref: fists.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
-<P><img src="imgsclub/fists.gif" ALT="" align=left>
-<BR CLEAR=LEFT>
-<P>
-<HR>
-<P>
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
+<p><img src="imgsclub/fists.gif" alt="" align=left>
+<br clear="left">
+<p>
+<hr>
+<p>
 <b>FISTS</b> - The International Morse Preservation Society
 (Den internationella sammanslutningen för morse-telegrafins bevarande)
-<P>
+<p>
 Motto: Where Fists Make Friends.
 (Där FISTS (= knytnävar) blir vänner)
-<P>
+<p>
 Detta är en världsomspännande telegrafiklubb som grundades i Storbrittanien.
 Den är öppen för alla telegrafientusiaster och har ett urval av aktiviteter
 som innefattar diplom, tester och en skriftlig bulletin som heter 
 Key Notes (nyckelanteckningar eller viktiga anteckningar).
-<P>
+<p>
 <a href=" http://www.fists.co.uk/">
-<img src="flags/uk.gif" ALT="U.K. "> Klicka här </a> 
+<img src="flags/uk.gif" alt="U.K. "> Klicka här </a> 
 för att se den brittiska grenens website.
-<P>
+<p>
 <a href="http://www.fists.org"> 
-<img src="flags/us.gif" ALT="U.S. "> Klicka här </a>
+<img src="flags/us.gif" alt="U.S. "> Klicka här </a>
 för att se den amerikanska grenens website.
 
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
