--- a/se-htc.html
+++ b/se-htc.html
@@ -3,20 +3,21 @@ translated: 2007-05-14
 originalhref: htc.html
 ---
 <html>
-<BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/htc.gif" ALT="" align=left></P>
-<P ALIGN=LEFT>
+<p><img src="imgsclub/htc.gif" alt="" align=left></p>
+<p align="left">
 <a href="http://www.htc.ch"><b>HTC:</b></a>
-<b>H</b>elvetia <b>T</b>elegraphy <b>C</b>lub (Schweiziska telegrafiklubben)<BR>
+<b>H</b>elvetia <b>T</b>elegraphy <b>C</b>lub (Schweiziska telegrafiklubben)<br>
 Detta är en schweizisk klubb för telegrafivänner.
 Håll utkik efter deras klubbstationer HB9HC och HB9HTC.
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
