--- a/se-iqrp.html
+++ b/se-iqrp.html
@@ -2,27 +2,29 @@
 translated: 2007-05-14
 originalhref: iqrp.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/iqrp.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
+<p><img src="imgsclub/iqrp.gif" alt="" align=left></p>
+</center><p align="left">
 <ul>
-<A HREF="http://www.arimontebelluna.it/">
-<b>I-QRP-C: I</b>talian <b>Q</b>RP <b>C</b>lub</A>
+<a href="http://www.arimontebelluna.it/">
+<b>I-QRP-C: I</b>talian <b>Q</b>RP <b>C</b>lub</a>
 Italienska QRP-klubben
-<BR>
-<P>
+<br>
+<p>
 Klubb för QRP-entusiaster i Italien.
 Ovanstående websida är mest på italienska.
 Den engelska varianten är under uppbyggnad.
-<P>
+<p>
 Kontakt E-mail...i3ffe (at-symbol) quipo.it...
-<P>
+<p>
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
