--- a/se-spcwc.html
+++ b/se-spcwc.html
@@ -2,63 +2,65 @@
 translated: 2007-05-14
 originalhref: spcwc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/spcwc.gif" ALT="" align=left></P>
-<BR LEFT=CLEAR>
-<P ALIGN=LEFT>
+<p><img src="imgsclub/spcwc.gif" alt="" align=left></p>
+<br clear="left">
+<p align="left">
 <a href="http://qtc.radio.org.pl/spcwc/"><b>SPCWC:</b></a> 
-Polsk telegrafigrupp<P>
+Polsk telegrafigrupp<p>
 Klicka ovan för att komma till den officiella klubbsidan som är skriven på
 polska, engelska och tyska.
 Den innehåller även en lista av medlemmar.
 Texten nedan kommer från sidan.
-<P>
-<HR>
-<P>
-<FONT COLOR="RED">Motto:<I> "Everybody can talk but CW is an art"</I></FONT> 
+<p>
+<hr>
+<p>
+<font color="RED">Motto:<i> "Everybody can talk but CW is an art"</i></font> 
 (Alla kan prata med telegrafi är en konst)
-<H2>Regler för den polska telegrafigruppen (SP-CW-C)</H2></CENTER>
-<OL>
-<LI> SP-CW-C är en speciell klubb ifrån Polska amatörradiounionen (PZK)
+<h2>Regler för den polska telegrafigruppen (SP-CW-C)</h2></center>
+<ol>
+<li> SP-CW-C är en speciell klubb ifrån Polska amatörradiounionen (PZK)
 som samlar radioamatörer och lyssnaramatörer med speciellt intresse
 för telegrafi (CW).
 
-<LI> Medlemsskap i SP-CW-C är öppet för alla OP (eller SWL) som
-tillhandahåller bevis på:<BR>
-<B>(a)</B> 3 SP-CW-C medlemmar körda på telegrafi, eller<BR>
-<B>(b)</B> 300 körda stationer på telegrafi under det gångna året.
+<li> Medlemsskap i SP-CW-C är öppet för alla OP (eller SWL) som
+tillhandahåller bevis på:<br>
+<b>(a)</b> 3 SP-CW-C medlemmar körda på telegrafi, eller<br>
+<b>(b)</b> 300 körda stationer på telegrafi under det gångna året.
 
-<LI> Ansökan skall innehålla en lista av alla de QSOn som krävs bekräftat
+<li> Ansökan skall innehålla en lista av alla de QSOn som krävs bekräftat
 av två licensierade män eller den lokala amatörradioklubben.
 
-<LI>Medlemsskapet bekräftas med ett speciellt certifikat vars kostnad
+<li>Medlemsskapet bekräftas med ett speciellt certifikat vars kostnad
 (motsvarande 3 USD) täcks av den som ansöker.
 
-<LI>Medlemsskapet är livslångt. Inga ytterligare avgifter finns.
+<li>Medlemsskapet är livslångt. Inga ytterligare avgifter finns.
 
-<LI>En medlem i en internationell telegrafiklubb kan bli medlem i SP-CW-C
+<li>En medlem i en internationell telegrafiklubb kan bli medlem i SP-CW-C
 bara genom att skicka in ansökan, utan några ytterligare krav.
 
-<LI>I enlighet med p.2, måste SWL bevisa att han hört 3 SP-CW-C members,
+<li>I enlighet med p.2, måste SWL bevisa att han hört 3 SP-CW-C members,
 eller 300 CW stationer under det gångna året.
 
-<LI> Alla medlemmar kan använda klubbens logo, medlemmarnas kännetecken.
+<li> Alla medlemmar kan använda klubbens logo, medlemmarnas kännetecken.
 Den bör visas på QSL-kortet.
 
-<LI>Klubben styrs av sin egen ordföranden som utses och avpolleteras
+<li>Klubben styrs av sin egen ordföranden som utses och avpolleteras
 av PZKs (Den Polska amatörradiounionen) ordförande.
 
-<LI>Betalningen och ansökan skall skickas till:<BR>
-</OL>
-        SP-CW-C, P.O. Box 18, 82-312 Elblag-13, Polen. <BR>
-E-mail:...qtc (at-symbol) post.pl...<P>
-</BODY>
-</HTML>
+<li>Betalningen och ansökan skall skickas till:<br>
+</ol>
+        SP-CW-C, P.O. Box 18, 82-312 Elblag-13, Polen. <br>
+E-mail:...qtc (at-symbol) post.pl...<p>
+</body>
+</html>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
