--- a/se-uft.html
+++ b/se-uft.html
@@ -2,14 +2,15 @@
 translated: 2007-05-14
 originalhref: uft.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/uft.gif" ALT="" align=left></P>
-</CENTER><P ALIGN=LEFT>
-<A HREF="http://www.uft.net"><b>UFT:</b>
-</A>
-Union Française des Télégraphistes (Franska unionen av telegrafister)<BR>
+<p><img src="imgsclub/uft.gif" alt="" align=left></p>
+</center><p align="left">
+<a href="http://www.uft.net"><b>UFT:</b>
+</a>
+Union Française des Télégraphistes (Franska unionen av telegrafister)<br>
 Telegrafiklubb i Frankrike.
 Medlemmar måste ha kunskap i franska språket.
 En stor del av alla franska telegrafivänner är medlemmar i UFT
@@ -17,12 +18,13 @@ som har en trevlig serie av aktiviteter inklusive en skriftlig bulletin
 kallad "La Pioche"
 [hackan? spettet? översättarens franskakunskaper är inte de bästa] 
 (på franska).
-<BR CLEAR=LEFT></P>
+<br clear="left"></p>
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
 
