--- a/se-vhsc.html
+++ b/se-vhsc.html
@@ -2,29 +2,30 @@
 translated: 2007-05-14
 originalhref: vhsc.html
 ---
-<html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
+<html>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
-<P><img src="imgsclub/vhsc.gif" ALT="" align=left></P>
-<P ALIGN=LEFT>
+<p><img src="imgsclub/vhsc.gif" alt="" align=left></p>
+<p align="left">
 <a href="http://www.morsecode.nl/vhscn.html"><b>VHSC:</b></a> 
 <b>V</b>ery <b>H</b>igh <b>S</b>peed <b>C</b>lub
 Mycket hög hastighetsklubben
-<BR>
+<br>
 är en höghastighetsklubb för vänner av telegrafihastigheter
 på åtminstone 200 tpm (40 wpm).
-<B>
-Allmän information</B> (Källa: VHSCs web-sida)
-<P>
+<b>
+Allmän information</b> (Källa: VHSCs web-sida)
+<p>
 Radiotelegrafisternas mycket höghastighetsklubb VHSC grundades
 den förste maj 1961 under beskydd av VERON och DARC och har till syfte att
 samla radioamatörer som klarar av att sända och ta emot mycket hög
 hastighetstelegrafi, och gör det för att uppmuntra telegrafitrafik
 i allmänhete och höghastighetstrafik i synnerhet.
-<P>
-<B>Hur man går med i VHSC
-</B>
-<P>
+<p>
+<b>Hur man går med i VHSC
+</b>
+<p>
 Var aktiv på banden och använd telegrafihastigheter på 200 tpm eller högre,
 och visa dina färdigheter att läsa och nyckla denna hastighet perfekt.
 VHSC-medlemmar kan ge dig en rekommendation till ett VHSC-medlemsskap.
@@ -45,7 +46,7 @@ Anropssignalen för VHSC-kandidaten kommer att publiceras på vår VHSC-bulletin
 som är ett nyhetsblad som skickas till alla medlemmar.
 Om det inte finns några invändningar hos VHSC-medlemmar inom tre månader
 kommer VHSC-kandidaten att registreras som VHSC-medlem.
-<P>
+<p>
 Alla rekommendationer måste visa varaktigheten av de VHSC-test-kontakter
 och nämna vilken telegrafihastighet som användes under dne VHSC-test-kontakten.
 Alla ansökningar skall innehålla en försäkran att ansökaren inte använde
@@ -53,18 +54,19 @@ tangentbord eller avkodare under de fyra (4) test-kontakterna.
 Ett medlemsskapscertifikat skickas till medlemmarna.
 Det finns inte någon ytterligare betalning för livsmedlemsskapet.
 Ansökningar skall skickas till ordföranden i VHSC:
-<P>
-PA0DIN D.J. Hoogma <BR>
-Schoutstraat 15 <BR>
-6525 XR NIJMEGEN <BR>
-Nederländerna<BR>
-<P>
+<p>
+PA0DIN D.J. Hoogma <br>
+Schoutstraat 15 <br>
+6525 XR NIJMEGEN <br>
+Nederländerna<br>
+<p>
 E-mail...dingelom (at-symbol) hetnet.nl...
-<BR>
-</PRE>
-<P><HR><P>
+<br>
+</pre>
+<p><hr><p>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body></html>
+</body>
+</html>
